--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,12 @@
   <groupId>com.example</groupId>
   <artifactId>jdbc-demo4</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+<dependency>
+<groupId>com.microsoft.sqlserver</groupId>
+<artifactId>mssql-jdbc</artifactId>
+<version>10.2.0.jre11</version>
+</dependency>
+
+</dependencies>
 </project>
